--- a/spaces-backend/package.json
+++ b/spaces-backend/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^8.18.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "razorpay": "^2.9.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
